fix: :construction: prevent h1 navlink from covering login button

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.site-main {
+	@apply flex flex-col w-full h-full bg-primary-A
+}
+
 /*--- Layout Debug Mode ---*/
 /* div { @apply border-dashed border border-red-500 } */
 
